objects/Account_History__c.object
<CustomObject>
    <description>To track the Account History on the Contact object i,e to track movements of the Contact from Account to Account.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account History</relationshipLabel>
        <relationshipName>Account_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <label>New Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Account__c</fullName>
        <label>Old Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Account History</label>
    <nameField>
        <displayFormat>AH-{0000000}</displayFormat>
        <label>Account History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>